--- a/app/src/main/res/layout/songs.xml
+++ b/app/src/main/res/layout/songs.xml
@@ -6,7 +6,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/relative_layout">
 
         <ImageView
             android:layout_width="300dp"
