--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -36,21 +36,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:gravity="bottom"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@android:color/white"
+                android:gravity="center_vertical"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="@android:color/black"
                 android:textStyle="bold"
-                tools:text="Song Title" />
+                tools:text="Song Title"
+                android:singleLine="true"
+                android:ellipsize="end"/>
 
             <TextView
                 android:id="@+id/song_artist_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@android:color/white"
-                android:gravity="top"
-                tools:text="Song Artist" />
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="@android:color/black"
+                android:gravity="center_vertical"
+                tools:text="Song Artist"
+                android:fontFamily="cursive"
+                android:textStyle="bold"
+                android:singleLine="true"
+                android:ellipsize="end"/>
         </LinearLayout>
 
     </LinearLayout>
